syntax = "proto3";

package collaboration;

service CollaborationService {
  // Comments
  rpc ListComments (ListCommentsRequest) returns (ListCommentsResponse);
  rpc GetComment (GetCommentRequest) returns (GetCommentResponse);
  rpc CreateComment (CreateCommentRequest) returns (CreateCommentResponse);
  rpc UpdateComment (UpdateCommentRequest) returns (UpdateCommentResponse);
  rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentResponse);
  
  // Time Logs
  rpc ListTimeLogs (ListTimeLogsRequest) returns (ListTimeLogsResponse);
  rpc GetTimeLog (GetTimeLogRequest) returns (GetTimeLogResponse);
  rpc CreateTimeLog (CreateTimeLogRequest) returns (CreateTimeLogResponse);
}

message ListCommentsRequest {
  string task_id = 1;
  string user_id = 2;
}

message ListCommentsResponse {
  repeated Comment comments = 1;
}

message GetCommentRequest {
  string id = 1;
  string user_id = 2;
}

message GetCommentResponse {
  Comment comment = 1;
}

message CreateCommentRequest {
  string user_id = 1;
  string task_id = 2;
  string comment_text = 3;
  string parent_comment_id = 4;
}

message CreateCommentResponse {
  Comment comment = 1;
}

message UpdateCommentRequest {
  string id = 1;
  string user_id = 2;
  string comment_text = 3;
}

message UpdateCommentResponse {
  Comment comment = 1;
}

message DeleteCommentRequest {
  string id = 1;
  string user_id = 2;
}

message DeleteCommentResponse {
  string message = 1;
}

message Comment {
  string id = 1;
  string task_id = 2;
  string user_id = 3;
  string comment_text = 4;
  string parent_comment_id = 5;
  string created_at = 6;
  string updated_at = 7;
}

message ListTimeLogsRequest {
  string task_id = 1;
  string user_id = 2;
}

message ListTimeLogsResponse {
  repeated TimeLog time_logs = 1;
}

message GetTimeLogRequest {
  string id = 1;
  string user_id = 2;
}

message GetTimeLogResponse {
  TimeLog time_log = 1;
}

message CreateTimeLogRequest {
  string user_id = 1;
  string task_id = 2;
  double hours_logged = 3;
  string log_date = 4;
  string description = 5;
  bool is_billable = 6;
}

message CreateTimeLogResponse {
  TimeLog time_log = 1;
}

message TimeLog {
  string id = 1;
  string task_id = 2;
  string user_id = 3;
  double hours_logged = 4;
  string log_date = 5;
  string description = 6;
  bool is_billable = 7;
  string created_at = 8;
}

